--- a/style.css
+++ b/style.css
@@ -317,9 +317,10 @@
 .sec6{
     position: absolute;
     width: 100%;
-    height: 60vh;
+    height: 90vh;
     margin-top: 108rem;
-    /* background: #f47676; */
+    background: #f47676;
+    padding: 15px;
     z-index: -1;
 }
 .sec6 h1{
