--- a/style.css
+++ b/style.css
@@ -798,6 +798,239 @@ footer p{
         margin-top: 207rem;
     }
 }
-@media screen and (min-width : 900px) {
+@media screen and (min-width : 900px) and (max-width:1024px){
+    .navbar{
+        background-color: #e8f929;
+        position: fixed;
+        width: 100%;
+    }
+    .list-nav{
+        width: 90%;
+        background-color: #4098ef;
+    }
+    .list-nav ul{
+        width: 85%;
+    }
+    .list-nav ul li{
+        padding: 0;
+        margin: 25px;
+    }
+    .list-nav .btn1{
+        width: 60vw;
+        margin: 5px 0 10px 70px;
+        /* margin-left: 10%; */
+        padding: 10px;
+    }
+    .text{
+        width: 100%;
+        background-color: #b55858;
+        height: 500px;
+    }
+    .text h1{
+        margin-left: 15px;
+        font-size: 30px;
+    }
+    .text span{
+        font-size: 32px;
+        margin-left: 15px;
+        width: 1;
+    }
+    .text p{
+        width: 100%;
+        margin-left: 10px;
+    }
+    .img-acueil{
+        width: 90%;
+        background-color: #c6a6a6;
+        margin-left: 50px;
+        height: 500px;
+        margin-top: 110px;
+    }
+    .img-acueil img{
+        width: 100%;
+        margin: 50px 10px;
+        
+    }
+    /* Section 2 */
+    .sec2 h5{
+        margin-left: 25rem;
+    }
+    .card-1 , .card-2{
+        height: 500px;
+    }
+    /*Section 3 */
+    .sec3{
+        background-color: #8deffe;
+    }
+    .sec3-contain{
+        margin-top: 30px;
+    }
+    .nombre{
+        position: relative;
+        width: 27%;
+        height: 14vh;
+        margin: 45px 35px;
+        padding: 18px;
+        border: 1px solid #05c279;
+        
+    }
+    .evolu{
+        margin-bottom: -10px;
+    }
+    .evolu i{
+        font-size: 26px;
+        color: #fca00d;
+    }
+    .nombre span{
+        font-size: 20px;
+        margin-left: 0.7rem;
+        margin-top: -20rem;
+    }
+    .p1{
+        width: 130px;
+        margin: 10px 1px 0px -18px;
+    }
+    .p2{
+        width: 120px;
+        margin: 10px 1px 0px -80px;
+    }
+    .p2 span{
+        margin-left: 60px;
+    }
+    .p3{
+        width: 178px;
+        margin: 10px 1px 0px -60px;
+    }
+    .p3 span {
+        margin-left: 38px;
+    }
+    /* Section 4 */
+    .sec4{
+        margin-top: 56.2rem;
+        height: 16vh;
+    }
     
+    /* Section 5 */
+    .contenu-evenement{
+        display: flex;
+        width: 100%;
+        height: 70vh;
+    }
+    .even{
+        width: 100%;
+        height: 50vh;
+        margin: 2px;
+        border: 2px solid rgb(255, 253, 253);
+        background: #fff;
+        cursor: pointer;
+    }
+    .even-img img{
+        width: 100%;
+        object-fit: contain;
+    }
+    .even-contenu span{
+        font-size: 16px;
+        margin-left: 5px;
+        color: #fca00d;
+    }
+    .even-contenu h3{
+        font-size: 17px;
+        padding: 1px;
+    }
+    .even-contenu p{
+        text-align: justify;
+    }
+    .map{
+        display:flex;
+        width: 100px;
+        margin: 10px;
+        padding: 5px;
+    }
+    .map i{
+        font-size: 18px;
+        color: #e76c08;
+    }
+    .map i,p{
+        padding: 5px;
+    }
+    .map >p{
+        color: #cf7b1a;
+    }
+    .even-btn{
+        padding: 19px;
+        width: 150px;
+        height: 22vh;
+        /* background-color: #fff; */
+        margin: -2.4rem auto;
+    }
+    .btn-plus:hover{
+        background-color: #27a49e;
+    }
+    .btn-plus{
+        width: 120px;
+        padding: 10px;
+        margin-left: 1rem;
+        margin-top: -20rem;
+        border-radius: 15px;
+        /* background: #fca00d; */
+        border-style: none;
+        color: white;
+        cursor: pointer;
+        z-index: 2;
+    }
+    /* Section 6 */
+    .sec6{
+        /* margin-top: 3rem; */
+        background-color: #4ad4e9;
+        height: 47vh;
+    }
+    .temoign{
+        width: 400px;
+    }
+    /* Section 7 */
+    .sec7{
+        height: 20vh;
+        margin-top: 133.7rem;
+    }
+    .inscrit-btn{
+        margin-left: 19.4rem;
+    }
+    /* Section 8 */
+    .sec-foot{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        background-color: #99ee5c;
+        height: 113vh;
+        margin-top: 2.3rem;
+    }
+    .sec-icon1{
+        background-color: #fe6e6e;
+        width: 400px;
+        height: 50vh;
+    }
+    .sec-icon2{
+        background-color: #23ec52;
+        width: 300px;
+        height: 50vh;
+        margin-left: 30px;
+    }
+    .sec-icon2 ul{
+        margin-left: 100px;
+    }
+    .sec-icon3{
+        background-color: #074a65;
+        width: 350px;
+        height: 50vh;
+        margin-top: -50px;
+    }
+    .sec-icon4{
+        background-color: #7e2ce2;
+        width: 350px;
+        height: 50vh;
+        margin-left: 2px;
+        margin-top: -50px;
+    }
+    footer{
+        margin-top: 206rem;
+    }
 }
