--- a/style.css
+++ b/style.css
@@ -20,13 +20,16 @@
     .list-nav ul{
         width: 76%;
         display: flex;
-        text-decoration: none;
     }
     .list-nav ul li{
         padding: 5px;
         margin: 15px;
-        list-style: none;
         font-size: 16px;
+        list-style: none;
+    }
+    .list-nav ul li a{
+        text-decoration: none;
+        color: black;
     }
     .chevron{
         margin: -15px 0 10px 72px;
